# MicroDronITESM_ROS

./: .gitignore  .gitmodules  README.md  drone_navigation.py  itesm_simulator  notes.txt  visualize.csv
src/drone_control/: CMakeLists.txt
src/drone_control/scripts/: remote_imu_consumer.py
src/drone_control/src/: Drone.cpp  Drone.h  SimplePID.cpp  SimplePID.h  main.cpp
src/drone_control/src/Drone/: Drone.cpp  Drone.h  SimplePID.cpp  SimplePID.h
src/itesm_simulator/: .gitignore  cachedCode.txt  drone_navigation.py  enums.py  figures.py  readers.py  requirements.txt  temp.py  visualModule.py
src/itesm_simulator/distance_calculator/: CMakeLists.txt  package.xml
src/itesm_simulator/distance_calculator/src/: distance_calculator_node.cpp
src/itesm_simulator/drone_control/launch/: drone_control_node.launch
src/itesm_simulator/drone_control/src/: PropellerDrawable.h  main.cpp
src/itesm_simulator/drone_control/src/Drone/: Drone.cpp  Drone.h
src/itesm_simulator/mavlink_imu_interface/: CMakeLists.txt
src/itesm_simulator/mavlink_imu_interface/src/: MAVLinkIMUInterface.cpp  MAVLinkIMUInterface.h  mavlink_imu_interface_node.cpp
src/itesm_simulator/mavlink_interface/: CMakeLists.txt  package.xml
src/itesm_simulator/mavlink_interface/src/: Actuators.h  MAVLinkInterface.cpp  MAVLinkInterface.h  mavlink_interface_node.cpp
src/itesm_simulator/utils/: createQR.py  dft.py  epicycles.py  figures.py  flightConfig.py  instructorToJSON.py  pathPlanner.py  requirements.txt  temp.txt  utils.py  vision.py  visualModule.py
